<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.orshimusicalstructure.MainActivity">

    <TextView
        android:id="@+id/playing"
        style="@style/CategoryStyle"
        android:background="@color/category_lightmenu"
        android:text="@string/category_playing" />

    <TextView
        android:id="@+id/albums"
        style="@style/CategoryStyle"
        android:background="@color/category_darkmenu"
        android:text="@string/category_albums" />

    <TextView
        android:id="@+id/artist"
        style="@style/CategoryStyle"
        android:background="@color/category_lightmenu"
        android:text="@string/category_artist" />

    <TextView
        android:id="@+id/lyrics"
        style="@style/CategoryStyle"
        android:background="@color/category_darkmenu"
        android:text="@string/category_lyrics" />

    <TextView
        android:id="@+id/playlist"
        style="@style/CategoryStyle"
        android:background="@color/category_lightmenu"
        android:text="@string/category_playlist" />

</LinearLayout>
