<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.orshimusicalstructure.PlayList">

    <LinearLayout
        style="@style/navBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_NavBar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playing"
            style="@style/navBarItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_playing" />

        <TextView
            android:id="@+id/albums"
            style="@style/navBarItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_albums" />

        <TextView
            android:id="@+id/artist"
            style="@style/navBarItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_artist" />

        <TextView
            android:id="@+id/playlist"
            style="@style/navBarItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_playlist" />

        <TextView
            android:id="@+id/lyrics"
            style="@style/navBarItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_lyrics" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/explanation_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track1" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track1Duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="02. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track2" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track2Duration" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="03. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track3" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track3Duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="04. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track4" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track4Duration" />
            </LinearLayout>

            <LinearLayout
                style="ex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="05. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track5" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track5Duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="06. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track6" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track6Duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="07. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track7" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track7Duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="08. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track8" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track8Duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="09. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track9" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track9Duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track10" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track10Duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track11" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track11Duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/songNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12. " />

                <TextView
                    style="@style/songTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track12" />

                <TextView
                    style="@style/songDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Track12Duration" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/playlistOperations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/openPlaylist" />

                <Button
                    style="@style/playlistOperations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/savePlaylist" />
            </LinearLayout>

            <TextView
                style="@style/explanation_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/playlistActivity_TextView" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
