<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lyrics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.orshimusicalstructure.Lyrics">

    <LinearLayout
        style="@style/navBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_NavBar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playing"
            style="@style/navBarItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_playing" />

        <TextView
            android:id="@+id/albums"
            style="@style/navBarItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_albums" />

        <TextView
            android:id="@+id/artist"
            style="@style/navBarItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_artist" />

        <TextView
            android:id="@+id/playlist"
            style="@style/navBarItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_playlist" />

        <TextView
            android:id="@+id/lyrics"
            style="@style/navBarItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_lyrics" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lyricsActivity_TextView"
                style="@style/explanation_textView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Track4"
                style="@style/explanation_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/lyrics_TextView"
                style="@style/explanation_textView" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
